link/button spacing fixes

--- a/web/components/sign-up-button/sign-up-button.module.scss
+++ b/web/components/sign-up-button/sign-up-button.module.scss
@@ -17,7 +17,7 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
     height: inherit;
     width: inherit;
     border-radius: 100%;
-    transition: transform 0.5s, border-color 0.5s, filter 0.5s;
+    transition: transform 0.65s, border-color 0.65s, filter 0.65s;
     transition-timing-function: theme.$ease-in-out;
     // filter: $dropshadowDefault;
     filter: blur(2px);
@@ -39,7 +39,7 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    transition: color 0.5s;
+    transition: color 0.65s;
     transition-timing-function: theme.$ease-in-out;
     &.buttonTextFirst {
       position: absolute;
@@ -50,7 +50,7 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
       position: absolute;
       filter:blur(5px);
       opacity: 1;
-      transition: color 0.5s, opacity 0.5s;
+      transition: color 0.65s, filter 0.65s;
     }
     &.buttonTextFirst H1, &.buttonTextFirst H2, &.buttonTextFirst p,
     &.buttonTextSecond H1, &.buttonTextSecond H2, &.buttonTextSecond p{
@@ -73,7 +73,7 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
     width: inherit;
     background-color: theme.$white;
     border-radius: 100%;
-    transition: transform 0.5s, background-color 0.5s;
+    transition: transform 0.65s, background-color 0.65s;
     transition-timing-function: theme.$ease-in-out;
     &.buttonFillFirst {
       transform: rotate(-5deg);
@@ -105,7 +105,7 @@ $dropshadowHover: drop-shadow(0px 4px 4px rgba(0, 0, 255, 1));
   }
   cursor: inherit;
   color: theme.$black;
-  transition: filter 0.5s;
+  transition: filter 0.65s;
   transition-timing-function: theme.$ease-in-out;
 
   &:hover {
